Log in layout ready and Sign up layout ready

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="login">Login</string>
     <string name="image">image</string>
     <string name="image2">Image2</string>
+    <string name="name">Name</string>
+    <string name="phone">Phone</string>
+
 </resources>
